update to bibliography and to .gitignore to ignore backup and autosave files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
+Phase1Bibliography.bib.bak
+Phase1Bibliography.bib.sav
+TaskShiftingMH.bib.bak
+TaskShiftingMH.bib.sav
+TaskShiftingSTI.bib.bak
+TaskShiftingSTI.bib.sav
